# saurcon_ws

./: .gitignore  .gitmodules  README.md  saurcon.repos
install/: local_setup.sh  setup.sh
install/control_rc/lib/control_rc/: talker
install/control_rc/share/control_rc/: package.ps1  package.sh
install/control_rc/share/control_rc/cmake/: control_rcConfig.cmake
install/joy/lib/joy/: game_controller_node  joy_node
install/joy/share/joy/: local_setup.sh  package.sh
install/joy_linux/share/joy_linux/: local_setup.sh  package.sh
install/sdl2_vendor/share/sdl2_vendor/: package.ps1  package.sh  package.zsh
install/spacenav/lib/spacenav/: spacenav_node
install/spacenav/share/spacenav/: package.sh
install/spacenav/share/spacenav/cmake/: export_spacenavExport-noconfig.cmake
install/wiimote/lib/wiimote/: teleop_wiimote_node  wiimote_node
install/wiimote/share/wiimote/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/wiimote/share/wiimote/cmake/: ament_cmake_export_dependencies-extras.cmake  export_wiimoteExport-noconfig.cmake  export_wiimoteExport.cmake
install/wiimote_msgs/share/wiimote_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/wiimote_msgs/share/wiimote_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_wiimote_msgs__rosidl_generator_cExport-noconfig.cmake  export_wiimote_msgs__rosidl_generator_cExport.cmake  export_wiimote_msgs__rosidl_generator_cppExport.cmake  export_wiimote_msgs__rosidl_generator_pyExport-noconfig.cmake  export_wiimote_msgs__rosidl_generator_pyExport.cmake  export_wiimote_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_wiimote_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  (+5 more)
log/: latest_build  latest_list
src/control_rc/: CMakeLists.txt  package.xml
src/control_rc/include/control_rc/: state_machine.hpp  topic_bridge.hpp
src/control_rc/include/types/: saurcon_types.hpp
src/control_rc/launch/: bringup.launch.py  saurcon.launch.py
src/control_rc/src/: ctrl_interface.cpp  publisher_control_rc.cpp  saurcon.cpp  state_machine.cpp  sub_xbox_ctrl.cpp  topic_bridge.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build  latest_list
(+54 files in other folders)
